Fixing view on mobile device
yeepee !!

--- a/style.css
+++ b/style.css
@@ -160,3 +160,7 @@ p a {
    display: flex;
     align-content: space-evenly;
 }
+
+.textcenter {
+            text-align: center;
+        }
